overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -9,10 +9,7 @@ img { max-width: 100%; height: auto; }
 [class*=col] { padding: 0; }
 [class*="grid-"], [class*="grid_"], [class~="grid"] { margin: 0; }
 
-html {
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-}
+html { scroll-behavior: smooth; }
 
 /******************** Utility Classes ********************/
 
@@ -237,13 +234,11 @@ color: #202a44;
 
 header {
     position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    height: 100px;
+    width: 100vw;
     transition: 0.5s;
     z-index: 99;
     color: white;
+    overflow-x: hidden;
 }
 
 header div a { padding: 0.3rem; }
@@ -257,6 +252,8 @@ nav { transition: all 0.3s;}
 nav.black {
     background-color: #202a44db;
     padding: 0 5%;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 /******************** Diagonal Boxes ********************/
@@ -275,8 +272,8 @@ nav.black {
 .diagonal-box2 {
     background-color: #202a3f;
     transform: skewY(10deg);
-    margin-top: -30vh;
-    padding-top: 35vh;
+    margin-top: -20vw;
+    padding-top: 20vw;
     padding-bottom: 120px;
     color: white;
 }
@@ -457,3 +454,57 @@ footer {
 .socials a {
     margin-left: 0.5rem;
 }
+
+/******************** Responsive Styles ********************/
+
+.show-xs, 
+.show-sm,
+.show-md {
+	display: none;
+}
+
+/* ------- MD Media Query (64em / 1024px) --------------- */
+
+@media (max-width: 64em) {
+
+    .show-md { display: block; }
+    .hide-md { display: none;  }
+
+    html { font-size: 0.9rem; }
+
+}
+
+/* ------- SM Media Query (48em / 768px) --------------- */
+
+@media (max-width: 48em) {
+    .show-sm { display: block; }
+    .hide-sm { display: none;  }
+
+    h2 {font-size: 2.6rem;}
+    h3 {font-size: 1.5rem;}
+    h4 {font-size: 1.3rem;}
+    h5 {font-size: 0.9rem;}
+    p  {font-size: 1rem;  }
+}
+
+/* ------- XS Media Query (36em / 576px) --------------- */
+
+@media (max-width: 36em) {
+    .show-xs { display: block; }
+    .hide-xs { display: none;  }
+
+    html { font-size: 0.8rem; }
+    h1 {font-size: 1.3rem;}
+    h2 {font-size: 1.5rem;}
+    h3 {font-size: 1.2rem;}
+    h4 {font-size: 1.3rem;}
+    h5 {font-size: 0.9rem;}
+    p  {font-size: 1rem;  }
+}
+
+/******************** Miscellaneous ********************/
+
+#about { overflow-y: hidden; }
+#home { overflow-y: hidden; }
+#header { overflow-y: hidden; }
+.content3 { overflow: hidden; }   
